--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <html>
 <body>
-<h1>All the power is with in you.</h1>
+<h1>All the power is with in you. You can do anything and everything!</h1>
 <h2>You are the creator of your destirny</h2>
-dasdasdasdasda
-  dsadasdasd</body>
+</body>
 </html>
